--- a/index.html
+++ b/index.html
@@ -275,35 +275,220 @@
                 </div>
             </section>
 
+            <section class="team section">
+                <div class="container">
+                    <h1 class="section-title">команда</h1>
+                    <ul class="team__list team__list--desktop">
+                        <li class="team__item">
+                            <div class="team__member">
+                                <img src="./img/team/boris.png" alt="" class="team__member-image">
+                            </div>
+                            <button class="team__title" type="button">
+                                Борис Федорович
+                            </button>
+                            <div class="team__content active">
+                                <div class="team__content-block">
+                                    <div class="team__content-role">
+                                        Главный технолог
+                                    </div>
+                                    <div class="team__content-desc">
+                                        Отвечает за вкусовые качества и калорийность.
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <div class="team__member">
+                                <img src="./img/team/alla.png" alt="" class="team__member-image">
+                            </div>
+                            <button class="team__title" type="button">
+                                Алла Иванова
+                            </button>
+                            <div class="team__content">
+                                <div class="team__content-block">
+                                    <div class="team__content-role">
+                                        Специалист по упаковке
+                                    </div>
+                                    <div class="team__content-desc">
+                                        Автор запоминающегося стиля наших батончиков.
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <div class="team__member">
+                                <img src="./img/team/mila.png" alt="" class="team__member-image">
+                            </div>
+                            <button class="team__title" type="button">
+                                Мила Рыжкова
+                            </button>
+                            <div class="team__content">
+                                <div class="team__content-block">
+                                    <div class="team__content-role">
+                                        PR, маркетинг
+                                    </div>
+                                    <div class="team__content-desc">
+                                        По всем вопросам сотрудничества и рекламы писать только Миле.
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <div class="team__member">
+                                <img src="./img/team/kirill.png" alt="" class="team__member-image">
+                            </div>
+                            <button class="team__title" type="button">
+                                Кирилл Матросов
+                            </button>
+                            <div class="team__content">
+                                <div class="team__content-block">
+                                    <div class="team__content-role">
+                                        Оператор
+                                    </div>
+                                    <div class="team__content-desc">
+                                        Разработал дизан наушников beats solo 3.
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                    <!--Mobile-->
+                    <ul class="team__list team__list--mobile">
+                        <li class="team__item">
+                            <button class="team__title" type="button">
+                                Борис Федорович
+                            </button>
+                            <div class="team__content active">
+                                <div class="team__member">
+                                    <img src="./img/team/boris.png" alt="" class="team__member-image">
+                                </div>
+                                <div class="team__content-block">
+                                    <div class="team__content-role">
+                                        Главный технолог
+                                    </div>
+                                    <div class="team__content-desc">
+                                        Отвечает за вкусовые качества и калорийность.
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            
+                            <button class="team__title" type="button">
+                                Алла Иванова
+                            </button>
+                            <div class="team__content">
+                                <div class="team__member">
+                                    <img src="./img/team/alla.png" alt="" class="team__member-image">
+                                </div>
+                                <div class="team__content-block">
+                                    <div class="team__content-role">
+                                        Специалист по упаковке
+                                    </div>
+                                    <div class="team__content-desc">
+                                        Автор запоминающегося стиля наших батончиков.
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            
+                            <button class="team__title" type="button">
+                                Мила Рыжкова
+                            </button>
+                            <div class="team__content">
+                                <div class="team__member">
+                                    <img src="./img/team/mila.png" alt="" class="team__member-image">
+                                </div>
+                                <div class="team__content-block">
+                                    <div class="team__content-role">
+                                        PR, маркетинг
+                                    </div>
+                                    <div class="team__content-desc">
+                                        По всем вопросам сотрудничества и рекламы писать только Миле.
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <button class="team__title" type="button">
+                                Кирилл Матросов
+                            </button>
+                            <div class="team__content">
+                                <div class="team__member">
+                                    <img src="./img/team/kirill.png" alt="" class="team__member-image">
+                                </div>
+                                <div class="team__content-block">
+                                    <div class="team__content-role">
+                                        Оператор
+                                    </div>
+                                    <div class="team__content-desc">
+                                        Разработал дизан наушников beats solo 3.
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
             <section class="reviews section">
                 <div class="container">
                     <h1 class="main__title main__title--reviews">отзывы</h1>
-                    <div class="review">
-                        <div class="avatar">
-                            <img src="./img/reviews/user1.png" alt="user1" class="avatar__img">
-                        </div>
-                        <div class="review__content">
-                            <div class="review__title">Отличный звук</div>
-                            <p class="review__content-text">Я ем малыми порциями, но часто. Это повышает мою
-                                продуктивность
-                                в разы. В течение дня сижу за компьютером и часто отходить в кафе или на кухню просто не
-                                могу себе позволить. А батончик – он всегда под рукой. Это приятно и удобно. </p>
-                            <div class="review__username">Билли Айлиш</div>
-                        </div>
-                    </div>
+                    <ul clas="reviews_list">
+                        <li class="review active" data-link-with="1">
+                            <div class="avatar">
+                                <img src="./img/reviews/user1.png" alt="user1" class="avatar__img">
+                            </div>
+                            <div class="review__content">
+                                <div class="review__title">Отличный звук</div>
+                                <p class="review__content-text">Я ем малыми порциями, но часто. Это повышает мою
+                                    продуктивность
+                                    в разы. В течение дня сижу за компьютером и часто отходить в кафе или на кухню просто не
+                                    могу себе позволить. А батончик – он всегда под рукой. Это приятно и удобно. </p>
+                                <div class="review__username">Билли Айлиш</div>
+                            </div>
+                        </li>
+                        <li class="review" data-link-with="2">
+                            <div class="avatar">
+                                <img src="./img/reviews/user2.png" alt="user1" class="avatar__img">
+                            </div>
+                            <div class="review__content">
+                                <div class="review__title">Крутой дизайн</div>
+                                <p class="review__content-text">После тренировок всегда хочется быстро закинуться чем-то белковым, потому что до дома ещё нужно доехать. А кушать хочется. Протеиновые батончики всегда выручают в этом плане. Спасибо производителю за этот качественный и экологичный продукт.  </p>
+                                <div class="review__username">Вадим Грачев</div>
+                            </div>
+                        </li>
+                        <li class="review" data-link-with="3">
+                            <div class="avatar">
+                                <img src="./img/reviews/user3.png" alt="user1" class="avatar__img">
+                            </div>
+                            <div class="review__content">
+                                <div class="review__title">На долго хватает заряда</div>
+                                <p class="review__content-text">Батончики понравились. На мой взгляд слегка завышена цена по сравнению с конкурентами, однако, как говорится – оно того стоит. Нравится носить с собой, нравится держать в руке. Ну и конечно же, кушать. Идеально утоляют голод, хоть и не надолго. Через час уже ем ещё один. Но это скорее плюс, чем минус.</p>
+                                <div class="review__username">Мария Орлова</div>
+                            </div>
+                        </li>
+                    </ul>
                     <div class="reviews__pager">
                         <ul class="reviews__pager-list">
-                            <li class="review__pager-item review__pager-item--active">
-                                <a href="" class="review__pager-link"><img src="./img/reviews/user1.png" alt="user1"
-                                        class="review__pager-image"></a>
+                            <li class="review__pager-item active">
+                                <a href="#" class="review__pager-link"  data-user="1">
+                                    <img src="./img/reviews/user1.png" alt="user1"
+                                        class="review__pager-image">
+                                </a>
                             </li>
                             <li class="review__pager-item ">
-                                <a href="" class="review__pager-link"><img src="./img/reviews/user2.png" alt="user2"
-                                        class="review__pager-image"></a>
+                                <a href="#" class="review__pager-link"  data-user="2">
+                                    <img src="./img/reviews/user2.png" alt="user2"
+                                        class="review__pager-image">
+                                </a>
                             </li>
-                            <li class="review__pager-item ">
-                                <a href="" class="review__pager-link"><img src="./img/reviews/user3.png" alt="user3"
-                                        class="review__pager-image"></a>
+                            <li class="review__pager-item "  >
+                                <a href="#" class="review__pager-link" data-user="3">
+                                    <img src="./img/reviews/user3.png" alt="user3"
+                                        class="review__pager-image">
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -480,6 +665,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/revPager.js"></script>
 </body>
 
 </html>
