Правки от наставника

--- a/index.html
+++ b/index.html
@@ -780,8 +780,7 @@
                         <div class="form__column">
                             <div class="form__item">
                                 <div class="form__item__label">Комментарий</div>
-                                <textarea class="form__input form__input--textarea" name="comment">
-                                </textarea>
+                                <textarea class="form__input form__input--textarea" name="comment"></textarea>
                             </div>
                             <div class="controls">
                                 <ul class="controls__list">
@@ -812,13 +811,49 @@
                 </div>
             </section>
             
-            <section class="map">
+            <section class="map section">
                 <div class="map__image" id="map__image">
-
                 </div>
+                <footer class="footer">
+                    <div class="container">
+                        <div class="footer__contacts">
+                            <div class="footer__address">Москва, ул.Новый Арбат, д.31/12</div>
+                            <address class="contacts">
+                                <a href="tel:+78007003030" class="contacts__phone contacts__phone--red contacts__phone--footer">
+                                    <svg class="contacts__image contacts__image--red">
+                                        <use xlink:href="./img/sprite.svg#phone">
+                                        </use>
+                                    </svg>8 800 700 30 30</a>
+                            </address>
+                        </div>
+                        <ul class="socials">
+                            <li class="socials__item socials__item--icon--vk">
+                                <a href="" class="socials__link">
+                                    <svg class="socials__img">
+                                        <use xlink:href="./img/sprite.svg#vk">
+                                        </use>
+                                    </svg></a></li>
+                            <li class="socials__item socials__item--icon--facebook"><a href="" class="socials__link"><svg
+                                        class="socials__img">
+                                        <use xlink:href="./img/sprite.svg#f">
+                                        </use>
+                                    </svg></a></li>
+                            <li class="socials__item socials__item--icon--instagram"><a href="" class="socials__link"><svg
+                                        class="socials__img">
+                                        <use xlink:href="./img/sprite.svg#in">
+                                        </use>
+                                    </svg></a></li>
+                            <li class="socials__item socials__item--icon--telegram"><a href="" class="socials__link"><svg
+                                        class="socials__img">
+                                        <use xlink:href="./img/sprite.svg#tv">
+                                        </use>
+                                    </svg></a></li>
+                        </ul>
+                    </div>
+                </footer>
             </section>
 
-            </section>
+            <!-- </section>
             <footer class="footer">
 
                 <div class="container">
@@ -856,7 +891,7 @@
                                 </svg></a></li>
                     </ul>
                 </div>
-            </footer>
+            </footer> -->
         </div>
     </div>
     <nav class="fixed-menu">
