--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU" type="text/javascript"></script>
-    <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
+    <script src="node_modules/jquery-touchswipe/jquery.touchSwipe.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.4.5/mobile-detect.min.js"></script>
     <script src="./scripts/index.js"></script>
     <script src="./scripts/revPager.js"></script>
