--- a/index.html
+++ b/index.html
@@ -920,8 +920,8 @@
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU" type="text/javascript"></script>
-    <script src="https://github.com/mattbryson/TouchSwipe-Jquery-Plugin/blob/master/jquery.touchSwipe.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.4.5/mobile-detect.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js"></script>
     <script src="./scripts/index.js"></script>
     <script src="./scripts/revPager.js"></script>
     <script src="./scripts/teamDesc.js"></script>
@@ -931,7 +931,7 @@
     <script src="./scripts/player.js"></script>
     <script src="./scripts/map.js"></script>
     <script src="./scripts/ops.js"></script>
-    
+
 </body>
 
 </html>
